docs: note local R8 OOM workaround in BUILDING.md